--- a/telegraf.conf
+++ b/telegraf.conf
@@ -60,3 +60,6 @@
 
 [[inputs.socket_listener]]
   service_address = "tcp://:8094"
+
+# Print all metrics that pass through this filter.
+[[processors.printer]]
