--- a/telegraf.conf
+++ b/telegraf.conf
@@ -1,5 +1,5 @@
 # Global tags can be specified here in key="value" format.
-# [global_tags]
+[global_tags]
   app="${APP_NAME}"
 
 # Configuration for telegraf agent
